<resources>
    <string name="app_name">Educación Jalisco</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="btn_text_close">Cerrar</string>

    <!--STRING MENUS-->
    <string name="action_settings">Ajustes</string>
    <string name="action_search">Buscar</string>
    <string name="action_refresh">Refrescar</string>
    <!--DRAWER NAV-->
    <string name="share_app">Comparte esta App</string>
    <string name="about">Acerca de</string>
    <string name="communicate">"Cómunicate"</string>
    <string name="setting">Ajustes</string>
    <string name="notifications">Notificaciones</string>
    <string name="news">"Lo más consultado"</string>

    <!-- STRINGS Fragments -->
    <string name="alumnos">Alumnos</string>
    <string name="administrativo">Administrativo</string>
    <string name="ciudadania">"Ciudadanía</string>
    <string name="calendario">Calendario Escolar 2016 – 2017</string>
    <string name="contact">Contacto</string>
    <string name="title_activity_calendar">Calendario Escolar</string>

    <!--STRINGS BUTTONS-->
    <string name="view_on_website">Ver en sitio Veb</string>
    <string name="download_file">Descargar archivo(s)</string>
    <string name="view_file">Ver archivo</string>

    <!--STRINGS DESCRIPTION SIMBOLS-->
    <string name="inicio_cursos">Inicio de cursos</string>
    <string name="fin_cursos">Fin de cursos</string>
    <string name="suspencion_labores_docentes">"Suspención de labores Docentes"</string>
    <string name="r_clases">Regreso a clases</string>
    <string name="c_escolar">Consejo Escolar</string>
    <string name="e_planea_primaria_6">"Evaluación PLANEA PRIMARIA a estudiantes de 6° grado. No se supenden clases"</string>
    <string name="e_planea_secundaria_3">"Evaluación PLANEA SECUNDARIA a estudiantes de 3° grado. No se supenden clases"</string>
    <string name="e_planea_diagnostica">"Aplicación PLANEA DIAGNÓSTICA a estudiantes de 4° grado de primaria por sus maestros. No se supenden clases"</string>
    <string name="vacaiones">Vacaiones</string>
    <string name="s_preinscripcion">"Solicitudes de preinscripción a preescolar, primer grado de primaria y primer grado de scundaria para el ciclo escolar 2017–2018"</string>
    <string name="title_activity_detail_convocatoria">DetailConvocatoria</string>

    <!--STRINGS BOTTOMSHEET-->
    <string name="numbers_telsep">TELSEP</string>
    <string name="numbers_calendario">Dudas Calendario</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">SIGUIENTE</string>
    <string name="skip">OMITIR</string>
    <string name="start">EMPEZAR</string>

    <string name="slide_1_title">"Educación Jalisco"</string>
    <string name="slide_1_desc">"Gracias por descargar la aplicación de la Secretaría de Educación Jalisco, ahora estarás informado de lo que sucede en el ámbito educativo."</string>

    <string name="slide_2_title">Si eres alumno</string>
    <string name="slide_2_desc">"Podrás consultar información como avisos, convocatorias para becas, tu calendario escolar y mucho más."</string>

    <string name="slide_3_title">"Si trabajas en la Secretaría"</string>
    <string name="slide_3_desc">"Podrás consultar información relacionada a los procesos del servicios profesional docente, noticias de tu interés y actividades relacionadas a tu labor docente o administrativa."</string>

    <string name="slide_4_title">Como ciudadano</string>
    <string name="slide_4_desc">"Entérate de la actividad de la Secretaría, te invitamos a seguirnos en nuestras redes sociales."</string>

    <string name="play_again">Otra vez</string>
    <string name="title_activity_cafeteria">Cafeteria</string>
    <string name="title_activity_about">About</string>

    <!--VERSIONS-->
    <string name="versions">Versiones</string>

    <string name="latest_version">1.2.3</string>

    <string name="version_1_2_2">1.2.2</string>
    <string name="version_1_2_1">1.2.1</string>
    <string name="version_1_2_0">1.2.0</string>
    <string name="version_1_1_9">1.1.9</string>
    <string name="version_1_1_8">1.1.8</string>
    <string name="version_1_1_7">1.1.7</string>
    <string name="version_1_1_6">1.1.6</string>
    <string name="version_1_1_5">1.1.5</string>
    <string name="version_1_1_4">1.1.4</string>
    <string name="version_1_1_3">1.1.3</string>
    <string name="version_1_1_2">1.1.2</string>
    <string name="version_1_1_1">1.1.1</string>

    <!--VERSIONS DESC-->
    <string name="des__1_1_1"><![CDATA[Lanzamiento de <b>Aplicación.</b>]]></string>
    <string name="des__1_1_2"><![CDATA[Se añadió detalle de convocatoria \n Modificación de <b>slider de inicio.</b> \n Se agregó Splash screen.]]></string>
    <string name="des__1_1_3"><![CDATA[Se añadió slider de introducción y Calendario Escolar \n Se corrigieron errores.]]></string>
    <string name="des__1_1_4"><![CDATA[Se añadió sección de cafetería]]></string>
    <string name="des__1_1_5"><![CDATA[Se corrigieron errores.]]></string>
    <string name="des__1_1_6"><![CDATA[Cambio de tema de colores y visor PDF.]]></string>
    <string name="des__1_1_7"><![CDATA[Corrección de errores, función de notificaciones añadida.]]></string>
    <string name="des__1_1_8"><![CDATA[Corrección de errores, <b>función de buscador</b> añadida y mejora en visor PDF]]></string>
    <string name="des__1_1_9"><![CDATA[Solución de errores simples]]></string>
    <string name="des__1_2_0"><![CDATA[Solución de errores simples, ]]></string>
    <string name="des__1_2_1"><![CDATA[Solución de errores simples, Sección de contacto añadida.]]></string>
    <string name="des__1_2_2"><![CDATA[Solución de errores simples, Sección de chat CENDI añadida.]]></string>
    <string name="des__1_2_3"><![CDATA[Se corrigieron errores.]]></string>

    <string name="title_activity_notifications">Notificationes</string>
    <string name="beta">BETA</string>
    <string name="header_text_notifications">Recibe notificaciones sobre avisos y noticias importantes</string>
    <string name="text_empty_notifications">Vaya! no tienes notificaciones</string>
    <string name="title_activity_most_consulted">Lo mas consultado</string>
    <string name="title_activity_search_result">SearchResult</string>
    <string name="title_activity_contact">Contacto</string>
    <string name="message_contact_done">Tu mensaje se ha enviado correctamente</string>
    <string name="chat">Chat CENDI</string>

    <string-array name="categories_array">
        <item>Padre,Madre o Tutor</item>
        <item>Alumno</item>
        <item>Docente, Directivo</item>
        <item>Otro</item>
    </string-array>

    <string-array name="type_subject">
        <item>Queja</item>
        <item>"Petición"</item>
        <item>Propuesta</item>
        <item>"Solicitud de Información"</item>
        <item>Otro</item>
    </string-array>


</resources>
