<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?attr/actionBarSize">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="mx.gob.jalisco.portalsej.portalsej.Calendar"
        tools:showIn="@layout/activity_calendar">

        <android.support.v7.widget.CardView
            android:id="@+id/number_to_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TitleCard"
                    android:textSize="15dp"
                    android:textColor="@color/colorPrimary"
                    android:text="Tienes dudas sobre el calendario escolar?"
                    android:layout_toStartOf="@+id/numberButton" />

                <Button
                    android:id="@+id/numberButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Télefonos de ayuda"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12dp"
                    android:padding="4dp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_alignTop="@+id/textView3"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBottom="@+id/textView3"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:id="@+id/container_months"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/number_to_call"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <android.support.v4.view.ViewPager
                android:id="@+id/pagerCalendar"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:foregroundGravity="center"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/next"
                android:layout_alignParentEnd="true" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="220dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:tint="@color/colorAccent"
                android:src="@drawable/ic_action_hardware_keyboard_arrow_left"
                android:id="@+id/prev" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="220dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:tint="@color/colorAccent"
                android:src="@drawable/ic_action_hardware_keyboard_arrow_right"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/next" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/simbols_container"
            android:layout_below="@+id/container_months"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:padding="10dp"
                    app:centered="true"
                    app:fillColor="@color/colorPrimary"
                    app:pageColor="@color/transparent"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="1dp"
                    app:snap="false"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/rectangulo_negro"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/inicio_cursos"
                    android:layout_marginLeft="@dimen/margin_text_calendar"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/rectangulo_negro_reflejo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/fin_cursos"
                    android:layout_marginLeft="@dimen/margin_text_calendar"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/circulo_negro"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/suspencion_labores_docentes"
                    android:layout_marginLeft="@dimen/margin_text_calendar"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/rectangulo_verde"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/r_clases"
                    android:layout_marginLeft="@dimen/margin_text_calendar"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/rectangulo_rojo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/c_escolar"
                    android:layout_marginLeft="@dimen/margin_text_calendar"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/rectangulo_azul"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/e_planea_primaria_6"
                    android:layout_marginLeft="@dimen/margin_text_calendar"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/rectangulo_am"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/e_planea_secundaria_3"
                    android:layout_marginLeft="@dimen/margin_text_calendar"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/rectangulo_morado"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/e_planea_diagnostica"
                    android:layout_marginLeft="@dimen/margin_text_calendar"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/rectangulo_gris"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/vacaiones"
                    android:layout_marginLeft="@dimen/margin_text_calendar"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/linea_roja"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/s_preinscripcion"
                    android:layout_marginLeft="@dimen/margin_text_calendar"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/simbols_container"
            android:layout_marginTop="@dimen/activity_vertical_margin">


        </LinearLayout>



    </RelativeLayout>


</ScrollView>
